// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList: Component should render card with job 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span
              id="metaItem-0"
            >
              Source
            </styled.span>
            <styled.span
              id="metaItemValue-0"
            >
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span
              id="metaItem-1"
            >
              Items
            </styled.span>
            <styled.span
              id="metaItemValue-1"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span
              id="metaItem-2"
            >
              Fields
            </styled.span>
            <styled.span
              id="metaItemValue-2"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span
              id="metaItem-3"
            >
              Filters
            </styled.span>
            <styled.span
              id="metaItemValue-3"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span
              id="metaItem-4"
            >
              Views
            </styled.span>
            <styled.span
              id="metaItemValue-4"
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
        <styled.div>
          <styled.div
            id="jobListHeader"
          >
            <FormattedMessage
              defaultMessage="Data Process History"
              id="dataSource.list.jobTitle"
              values={Object {}}
            />
          </styled.div>
          <Styled(Link)
            key="0"
            to="/job/1"
          >
            <styled.div>
              <styled.div
                id="jobStateValue"
              />
              <styled.div
                id="jobIdLabel"
              >
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                <span
                  id="jobIdValue"
                >
                  1
                </span>
              </styled.div>
            </styled.div>
            <styled.div
              id="jobUpdatedAtLabel"
            >
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              <span
                id="jobUpdatedAtValue"
              >
                08/09/2019 10:20
              </span>
            </styled.div>
          </Styled(Link)>
          <Styled(Link)
            key="1"
            to="/job/2"
          >
            <styled.div>
              <styled.div
                id="jobStateValue"
              />
              <styled.div
                id="jobIdLabel"
              >
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                <span
                  id="jobIdValue"
                >
                  2
                </span>
              </styled.div>
            </styled.div>
            <styled.div
              id="jobUpdatedAtLabel"
            >
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              <span
                id="jobUpdatedAtValue"
              >
                07/09/2019 11:30
              </span>
            </styled.div>
          </Styled(Link)>
          <Styled(Link)
            key="2"
            to="/job/3"
          >
            <styled.div>
              <styled.div
                id="jobStateValue"
              />
              <styled.div
                id="jobIdLabel"
              >
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                <span
                  id="jobIdValue"
                >
                  3
                </span>
              </styled.div>
            </styled.div>
            <styled.div
              id="jobUpdatedAtLabel"
            >
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              <span
                id="jobUpdatedAtValue"
              >
                06/09/2019 12:40
              </span>
            </styled.div>
          </Styled(Link)>
          <Styled(Link)
            key="3"
            to="/job/4"
          >
            <styled.div>
              <styled.div
                id="jobStateValue"
              />
              <styled.div
                id="jobIdLabel"
              >
                <FormattedMessage
                  defaultMessage="Job id:"
                  id="dataSource.list.jobId"
                  values={Object {}}
                />
                 
                <span
                  id="jobIdValue"
                >
                  4
                </span>
              </styled.div>
            </styled.div>
            <styled.div
              id="jobUpdatedAtLabel"
            >
              <FormattedMessage
                defaultMessage="Updated at"
                id="dataSource.list.updatedAt"
                values={Object {}}
              />
               
              <span
                id="jobUpdatedAtValue"
              >
                05/09/2019 13:50
              </span>
            </styled.div>
          </Styled(Link)>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <NavigationContainer
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span
              id="metaItem-0"
            >
              Source
            </styled.span>
            <styled.span
              id="metaItemValue-0"
            >
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span
              id="metaItem-1"
            >
              Items
            </styled.span>
            <styled.span
              id="metaItemValue-1"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span
              id="metaItem-2"
            >
              Fields
            </styled.span>
            <styled.span
              id="metaItemValue-2"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span
              id="metaItem-3"
            >
              Filters
            </styled.span>
            <styled.span
              id="metaItemValue-3"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span
              id="metaItem-4"
            >
              Views
            </styled.span>
            <styled.span
              id="metaItemValue-4"
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
    <styled.li
      key="1"
    >
      <Component
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span
              id="metaItem-0"
            >
              Source
            </styled.span>
            <styled.span
              id="metaItemValue-0"
            >
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span
              id="metaItem-1"
            >
              Items
            </styled.span>
            <styled.span
              id="metaItemValue-1"
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span
              id="metaItem-2"
            >
              Fields
            </styled.span>
            <styled.span
              id="metaItemValue-2"
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span
              id="metaItem-3"
            >
              Filters
            </styled.span>
            <styled.span
              id="metaItemValue-3"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span
              id="metaItem-4"
            >
              Views
            </styled.span>
            <styled.span
              id="metaItemValue-4"
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <NavigationContainer
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <styled.div />
  <NavigationContainer
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
